Fixed text wrapping on index.html
Got contradictory opinions on whether to make images stack vertically on
 hobbies.html to be more responsive and mobile friendly, or to make them
  horizontal for less scrolling.  Ultimately decided to stack images
   vertically to be consistent with other pages and make it more mobile
   friendly and responsive.

Switched border style to solid.

Added more text information to hobbies.html

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ figure {
 .pinktheme {
     background-color: white;
     border-radius: 2rem;
-    border-style: dotted;
+    border-style: solid;
     border-color: deeppink;
     padding: 3rem;
     margin-left: auto;
